fix: javafx runtime components missing